Fix tablet viewport h2 font-size for destination.html and tab menu gap for mobile viewport

--- a/css/main.css
+++ b/css/main.css
@@ -191,7 +191,7 @@
 }
 
 .tab-list {
-  --gap: 2.5rem;
+  --gap: 1.5rem;
 }
 
 .dot-indicators>* {
@@ -381,6 +381,13 @@
   .destination-meta {
     flex-direction: row;
     justify-content: space-evenly;
+  }
+
+  .tab-list {
+    --gap: 2rem;
+  }
+  .grid-container--destination h2 {
+    font-size: var(--fs-900)
   }
 
   .grid-container--technology > picture {
